# seqc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: elog.rs  main.rs
src/: dialect.rs  error.rs  lib.rs  pattern.rs
