cargo-features = ["trim-paths"]

[package]
name = "seqc"
version = "0.1.0"
authors = ["quyxishi <874contact@proton.me>"]
description = "Pattern-based encoding library"
edition = "2024"
license = "MIT"
repository = "https://github.com/quyxishi/seqc"
documentation = "https://docs.rs/seqc"
readme = "README.md"
keywords = ["encoding", "encryption", "low-entropy", "steganography", "cli"]
categories = ["command-line-utilities", "encoding"]

[workspace]
members = ["cli"]

[dev-dependencies]
rand = "0.9.2"

[features]
default = ["std", "from_bytes"]
std = []
from_bytes = []

[profile.release]
opt-level = "z"
debug = false
split-debuginfo = "packed"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1
panic = "abort"
rpath = false
trim-paths = "all"
